# DataStreamCryptoAnalysis

./: 1.py  aux_coding_methods.py  for_plot - time.txt  input.webm  main_console.py  main_gui.py  main_gui.spec  main_image_test.py  readme.txt  test3.py  test_algo_coding_hashing.py  test_pack.dat.tar.xz
ari_coding_cpp/: AdaptiveArithmeticCompress  AdaptiveArithmeticDecompress  ArithmeticDecompress  CMakeCache.txt  CMakeLists.txt  Makefile  PpmCompress  PpmDecompress  arithmetic_encoding.cpp  cmake_install.cmake  setup.py
ari_coding_cpp/.deps/: AdaptiveArithmeticCompress.d  AdaptiveArithmeticDecompress.d  ArithmeticCoder.d  ArithmeticCompress.d  ArithmeticDecompress.d  PpmCompress.d  PpmDecompress.d
coder_methods/: coder.py  decoder.py
coder_methods_old/: coder.py  decoder.py
data archive/: 4_coded.txt  arr1.txt  compile command for lib.txt  for_plot - Копія.txt  for_plot.txt  message.csv  test_base64.txt
image generators/: generator1 - Копія.py  generator2 - Копія.py  generator2.py  generator_objects_of_different_sizes.py  main_image_test.py  main_image_test_colors.py
random file generator/: ArithmeticCompress  generator.sh  generator_cpp.sh  sleep.stderr  times_x.txt  times_y_cpp.txt  times_y_python.txt
Створити папку/: generator1.py
